# CI_CD

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
attempt_venv/: pyvenv.cfg
attempt_venv/Scripts/: activate  activate.bat
src/second_venv/: primes_sum.py  test.py
tests/: test_.py
