[project]
name = "second_venv"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "bkhtmm", email = "mobakhyt@gmail.com"},
]
dependencies = [
    "pip>=24.2",
    "ruff>=0.7.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
show-fixes = true
line-length = 120